<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="fill_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
        android:id="@+id/iconHome"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/iconHome"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_edt1"
        android:id="@+id/layoutEdtMail"
        android:layout_marginTop="60dp"
        android:paddingEnd="10dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edtPhone"
            android:background="@drawable/bg_edt1"
            android:hint="@string/phone"
            android:maxLines="1"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            app:endIconMode="clear_text"
            android:inputType="phone"
            android:paddingStart="10dp" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_clear_white"
            android:id="@+id/imgClearPhone"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textSize="16sp"
        android:layout_below="@id/layoutEdtMail"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:textColor="@color/white"
        android:paddingRight="20dp"
        android:id="@+id/txtForgetPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layoutEdtPass"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtForgetPass"
        android:layout_centerHorizontal="true"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/white">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/edtPass"
            android:background="@drawable/bg_edt1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:maxLength="32"
            android:paddingStart="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layoutRemember"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/layoutEdtPass"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingEnd="20dp">

        <CheckBox
            android:id="@+id/checkBoxRememberLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:button="@drawable/bg_checkbox"
            android:checked="true"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberPass"
            android:textColor="@color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:id="@+id/txtError"
        android:layout_marginTop="10dp"
        android:layout_below="@id/layoutRemember"
        android:gravity="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtError"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_btn1"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_btn2"
        android:layout_below="@+id/btnLogin1"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:id="@+id/btnRegister1"
        android:text="@string/register"/>
</RelativeLayout>
</ScrollView>