<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="fill_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/iconHome"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_below="@id/iconHome"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_edt1"
            android:id="@+id/layoutEdtName"
            android:layout_marginTop="20dp"
            android:paddingEnd="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edtName"
                android:background="@drawable/bg_edt1"
                android:hint="@string/name"
                android:maxLines="1"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                app:endIconMode="clear_text"
                android:inputType="text"
                android:paddingStart="10dp" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_clear_white"
                android:id="@+id/imgClearName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:layout_below="@id/layoutEdtName"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_edt1"
            android:id="@+id/layoutEdtMail"
            android:layout_marginTop="20dp"
            android:paddingEnd="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edtPhone"
                android:background="@drawable/bg_edt1"
                android:hint="@string/phone"
                android:maxLines="1"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                app:endIconMode="clear_text"
                android:inputType="phone"
                android:paddingStart="10dp" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_clear_white"
                android:id="@+id/imgClearPhone"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/layoutEdtPass"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/layoutEdtMail"
            android:layout_centerHorizontal="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edtPass"
                android:background="@drawable/bg_edt1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:maxLength="32"
                android:paddingStart="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/layoutEdtRePass"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/layoutEdtPass"
            android:layout_centerHorizontal="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edtRePass"
                android:background="@drawable/bg_edt1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:maxLength="32"
                android:paddingStart="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_btn1"
            android:layout_below="@+id/layoutEdtRePass"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:id="@+id/btnRegister2"
            android:text="@string/register"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_btn2"
            android:layout_below="@+id/btnRegister2"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:id="@+id/btnLogin2"
            android:text="@string/login"/>
    </RelativeLayout>
</ScrollView>